--- a/dormitor2.html
+++ b/dormitor2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/Cabin.css?h=4eca0eecf3b0192c1c8a6b69199c5053">
     <link rel="stylesheet" href="assets/css/Lora.css?h=4df1f47d4ab70a1d517d9b3ca6f3320e">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stil.css">
     <style>
        
     </style>
