--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         
                         <a href="https://www.booking.com/hotel/ro/casa-teodora-sinaia.ro.html" target="_blank">
                         <div class="box">
-                            <img src="/assets/img/booking.png" alt="" srcset="" style="width: 101.99%;">
+                            <img src="assets/img/booking.png" alt="" srcset="" style="width: 101.99%;">
                             <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
                         </div>
                         </a>
@@ -91,7 +91,7 @@
 
                         <a href="https://travelminit.ro/ro/cazare/casa-teodora-sinaia" target="_blank">
                         <div class="box">
-                            <img src="/assets/img/travel.png" style="width: 100%;">
+                            <img src="assets/img/travel.png" style="width: 100%;">
                             <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
                             </div>   
                         </a>
