--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
 
                         <a href="https://travelminit.ro/ro/cazare/casa-teodora-sinaia" target="_blank">
                         <div class="box">
-                            <img src="assets/img/travel.png" style="width: 100%;">
-                            <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
+                            <img src="assets/img/travel.png" style="width: 100%;">button{
+                                border-radius: 12px; 
+                                
+                            }
+                            <button style="border-radius: 12px;font-size:medium; 
+                            padding: 0px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
                             </div>   
                         </a>
 
