--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                                 border-radius: 12px; 
                                 
                             }
-                            <button style="border-radius: 12px;font-size:medium; 
-                            padding: 0px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
+                            <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
                             </div>   
                         </a>
 
