--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@
 
                         <a href="https://travelminit.ro/ro/cazare/casa-teodora-sinaia" target="_blank">
                         <div class="box">
-                            <img src="assets/img/travel.png" style="width: 100%;">button{
-                                border-radius: 12px; 
-                                
-                            }
+                            <img src="assets/img/travel.png" style="width: 100%;">
                             <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
                             </div>   
                         </a>
