--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="https://www.booking.com/hotel/ro/casa-teodora-sinaia.ro.html" target="_blank">
                         <div class="box">
                             <img src="assets/img/booking.png" alt="" srcset="" style="width: 101.99%;">
-                            <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
+                            <button style=" padding: 0px; margin-top: 10px; border: 1px solid black;">Rezervă acum!</button>
                         </div>
                         </a>
 
@@ -92,7 +92,7 @@
                         <a href="https://travelminit.ro/ro/cazare/casa-teodora-sinaia" target="_blank">
                         <div class="box">
                             <img src="assets/img/travel.png" style="width: 100%;">
-                            <button style="border-radius: 12px; border: 1px solid black; margin-top: 5px;">Rezervă acum!</button>
+                            <button style=" padding: 0px; margin-top: 10px; border: 1px solid black;">Rezervă acum!</button>
                             </div>   
                         </a>
 
