--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Casa Teodora</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=4c5191231fb84669227711b1cb0f64b0">
-    <link rel="stylesheet" href="assets/css/Cabin.css?h=4eca0eecf3b0192c1c8a6b69199c5053">
-    <link rel="stylesheet" href="assets/css/Lora.css?h=4df1f47d4ab70a1d517d9b3ca6f3320e">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets1/css/Swiper-Slider-Card-For-Blog-Or-Product-swiper.min.css?h=35808ef06463b831c589a6910b5c8506">
     <link rel="stylesheet" href="assets1/css/Swiper-Slider-Card-For-Blog-Or-Product-untitled.css?h=0064fcae07c7c9addde72237b5cacb06">
     <link rel="stylesheet" href="stil.css">
