--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h1 class="brand-heading" style="margin-bottom: 200px;">Casa Teodora</h1>
                         <div style="display: flex; justify-content: center;">
-                        <p style="margin-top: 50px; font-size: 24px; color: rgb(255, 255, 255); backdrop-filter: blur(12px); width: 150px; border-radius:60% 40% 60% 40% / 0% 100% 0% 100%; border: 1px solid white;  text-align: center;">SINAIA</p>
+                        <p style="margin-top: 50px; font-size: 24px; color: rgb(255, 255, 255);  -webkit-backdrop-filter: blur(12px); backdrop-filter: blur(12px); width: 150px; border-radius:60% 40% 60% 40% / 0% 100% 0% 100%; border: 1px solid white;  text-align: center;">SINAIA</p>
                         </div>
                         <a class="btn btn-link btn-circle" role="button" href="#download"><i class="fa fa-angle-double-down animated"></i></a>
                     </div>
