--- a/bucatarie.html
+++ b/bucatarie.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="en">
 
-<head>
+<head><!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3TB4VSF71C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3TB4VSF71C');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Casa Teodora</title>
+    <title>poze</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=4c5191231fb84669227711b1cb0f64b0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
