--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
             <div class="blog-slider__img"><img src="assets/img/c3.webp"></div>
             <div class="blog-slider__content">
                 
-                <!-- Start: Your Text --><div class="blog-slider__title">"In spatele casei se afla sina de tren. Pt persoanele cu somn mai sensibil poate fi usor deranjant pe timpul noptii, in schimb, pt copii, pe timp de zi poate fi interesant sa vada trenurile trecand."</div><!-- End: Your Text -->
+                <!-- Start: Your Text --><div class="blog-slider__title">"
+Totul a fost minunat! Arată chiar mai bine decât în poze (atât casa, cât și curtea), totul extrem de curat și de îngrijit. Proprietarii sunt niște oameni extraordinari, amabili și calzi. Cu siguranță vom reveni!"</div><!-- End: Your Text -->
              
             </div>
         </div><!-- End: 3rd Slide -->
@@ -175,6 +176,8 @@
     <footer>
         <div class="container text-center">
             <p>Copyright ©&nbsp;Casa Teodora 2023</p>
+            <p>Email: laurentiusiboiu@yahoo.com</p>
+            <p>Telefon: 0722356418</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
