--- a/baie1.html
+++ b/baie1.html
@@ -61,6 +61,8 @@
     <footer>
         <div class="container text-center">
             <p>Copyright ©&nbsp;Casa Teodora 2023</p>
+            <p>Email: laurentiusiboiu@yahoo.com</p>
+            <p>Telefon: 0722356418</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
