--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets1/css/Swiper-Slider-Card-For-Blog-Or-Product-swiper.min.css?h=35808ef06463b831c589a6910b5c8506">
     <link rel="stylesheet" href="assets1/css/Swiper-Slider-Card-For-Blog-Or-Product-untitled.css?h=0064fcae07c7c9addde72237b5cacb06">
     <link rel="stylesheet" href="stil.css">
+    <link rel="icon" href="assets/img/1.webp">
     <style>
        
     </style>
