--- a/dormitor2.html
+++ b/dormitor2.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="stil.css">
+    <link rel="icon" href="assets/img/1.webp">
     <style>
        
     </style>
