--- a/index.html
+++ b/index.html
@@ -94,17 +94,19 @@
                         </div>
                         </a>
 
-                        <!-- <div class="box" style="flex-direction: column;">
-                            <p>Poți face o rezervare telefonică la numărul X<span style="font-size: small;">(aici pot implementa un sistem propietar de rezervari)</span>&nbsp;</p>
-                            <a href="tel:0000000000"><button style="border-radius: 12px; border: 1px solid black;">Sună acum!</button></a>
-                        </div> -->
-
+                        
                         <a href="https://travelminit.ro/ro/cazare/casa-teodora-sinaia" target="_blank">
                         <div class="box">
                             <img src="assets/img/travel.webp" style="border-radius: 12px; width: 100%;">
                             <button style=" padding: 0px; margin-top: 10px; border: 1px solid black;">Rezervă acum!</button>
-                            </div>   
+                            </div>
                         </a>
+                        <a href="https://www.facebook.com/casateodorasinaia/photos" target="_blank">
+                            <div class="box" style="border-radius: 100px;">
+                                <img src="assets/img/Facebook_f_logo_(2021).svg.png" style="margin-top: 84px; width: 100%;">
+                                <button style=" padding: 0px; margin-top: 10px; border: 1px solid black;">Vizitează pagina!</button>
+                            </div>
+                            </a>
 
                     </div>
 
