--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@ Totul a fost minunat! Arată chiar mai bine decât în poze (atât casa, cât ș
 <script src="assets1/js/Swiper-Slider-Card-For-Blog-Or-Product-swiper.min.js?h=991afcfa41cba2f581d9aab17dc1d26a"></script>
     </section>
     <!-- Start: Map Clean -->
-    <div class="map-clean"><iframe allowfullscreen frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCivuxEadY3eGhvX6DZMeggmdOpfHSrjg4&amp;q=Casa+Teodora+sinaia&amp;zoom=15" width="100%" height="450"></iframe></div><!-- End: Map Clean -->
+    <div class="map-clean">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2719.836073468725!2d25.5520127!3d45.3591328!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b3171a3880a5cb%3A0xffbb26e2fbab2481!2sCasa%20Teodora!5e0!3m2!1sen!2sro!4v1684591290!5m2!1sen!2sro" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+<!-- End: Map Clean -->
     
     <footer>
         <div class="container text-center">
